--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "George MacKerron",
   "license": "ISC",
   "scripts": {
-    "update-zapatos-types": "env-cmd -f .env.local npx zapatos"
+    "update-zapatos-types": "env-cmd -f .dev.vars npx zapatos"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.2.6",
@@ -15,6 +15,7 @@
     "env-cmd": "^10.1.0",
     "typescript": "^4.9.4",
     "vercel": "^28.14.1",
+    "wrangler": "^2.12.0",
     "ws": "^8.12.0"
   }
 }
