--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "author": "George MacKerron",
   "license": "ISC",
   "scripts": {
-    "update-zapatos-types": "env-cmd -f .dev.vars npx zapatos"
+    "update-zapatos-types": "env-cmd -f .dev.vars node ./update-zapatos-types.mjs"
   },
   "dependencies": {
-    "@neondatabase/serverless": "^0.2.6",
+    "@neondatabase/serverless": "^0.4.1",
     "pg": "file:shims/pg",
     "zapatos": "^6.1.0"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
-    "typescript": "^4.9.4",
+    "typescript": "^5.0.4",
     "vercel": "^28.14.1",
     "wrangler": "^2.12.0",
     "ws": "^8.12.0"
