--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,10 @@
   ],
   "compilerOptions": {
     "target": "ES2020",
-    "moduleResolution": "Node",
+    "moduleResolution": "Node16",
     "esModuleInterop": true,
-    "strict": true
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true
   }
 }
